fix: server error

--- a/slides/slide1.html
+++ b/slides/slide1.html
@@ -118,8 +118,8 @@
                 </h2>
                 
                 <div class="border-l-4 border-blue-500 pl-4 presenter-info mt-12">
-                    <p class="text-xl mb-1">발표자: <span class="text-blue-300">박준원</span></p>
-                    <p class="text-lg mb-1 text-gray-400">소프트웨어 엔지니어 / 개발 교육 담당</p>
+                    <p class="text-xl mb-1">제작자: <span class="text-blue-300">박준원</span></p>
+                    <p class="text-lg mb-1 text-gray-400">MAS 4th 부원</p>
                     <p class="text-lg text-gray-500">2025년 4월</p>
                 </div>
                 
